Changing background image.

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -920,7 +920,7 @@ ul li {
 /* line 11, ../scss/components/_img.scss */
 .avatar-wrap {
   padding: 24px;
-  background: url('../img/japanesemaple.jpg?1400429140') 0 -100px;
+  background: url('../img/birch.jpg?1400429140') 0 -100px;
   background-size: cover;
   max-height: 100px;
   -webkit-border-top-left-radius: 3px;
